Finished last stages of project.

--- a/class-02-jquery-and-events/pair-assignment/starter-code/styles/modules.css
+++ b/class-02-jquery-and-events/pair-assignment/starter-code/styles/modules.css
@@ -2,6 +2,7 @@
 
 .site-header {
   padding: .1em;
+  background-color: #ccc;
 }
 
 .main-nav {
@@ -22,6 +23,7 @@
 
 #filters {
   padding: 0;
+  width:100%;
 }
 
 #filters select {
