--- a/class-02-jquery-and-events/pair-assignment/starter-code/styles/base.css
+++ b/class-02-jquery-and-events/pair-assignment/starter-code/styles/base.css
@@ -27,10 +27,14 @@ address {
 
 a, a:link, a:active {
   color: #777;
+  text-decoration: none;
 }
 
 a:hover, a:focus {
+  color:#aaa;
+
 }
 
 a:visited {
+  color:red;
 }
